Iterate possible diagrams heterogeneity

--- a/OSG/analysis/osg_characterization_paper.ipynb
+++ b/OSG/analysis/osg_characterization_paper.ipynb
@@ -1,8 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -281,7 +285,7 @@
     "* Running Time ($T_r$): Pilot\n",
     "* Execution Time ($T_x$): Task\n",
     "\n",
-    "# Measures of Dynamism\n",
+    "# Measures of Dynamism?\n",
     "\n",
     "* Number of concurrent Workloads ($C_w$): Workload\n",
     "* Number of concurrent (used) Pilots ($C_p$): Workload\n",
@@ -300,27 +304,30 @@
     "\n",
     "Dynamism of E on R as measured by M\n",
     "\n",
+    "\n",
     "| ID  | Entity   | Resource | Measure   | Plot                                    |Description |\n",
-    "|-----|----------|----------|-----------|-----------------------------------------|------------|\n",
+    "|:----|:---------|:---------|:----------|:----------------------------------------|:-----------|\n",
     "| 1   | Workload | XOVC     | $TTC$     | Histogram: x = $TTC$ (s); y = Frequency | For every experiment run, multiple instances of the same run are sequentially submitted to XOVC. The histogram describes the dynamism of that run's workload on XOVC as measured by the distribution of $TTC$. |\n",
     "| 2   | Workload | XOVC     | $TTQ$     | Histogram: x = $TTQ$ (s); y = Frequency | As 1 but with $TTQ$. |\n",
     "| 3   | Workload | XOVC     | $TTX$     | Histogram: x = $TTX$ (s); y = Frequency | As 1 but with $TTX$. |\n",
-    "| 4   | Pilot    | XOVC     | $T_q$     | Histogram: x = $T_q$ (s); y = Frequency | For every type of pilot (only one type on XOVC &lt;1; unspecified; unspecified>), multiple instances of the same pilot are sequentially submitted to XOVC. The histogram describes the dynamism of that pilot on XOVC as measured by the distribution of $T_q$. (We are not sure what we are measuring: the time the pilot has been waiting on the broker (the broker does late binding of jobs to hosts) or the time the pilot has been waiting on a host (the broker does early binding of jobs to hosts). I think the former but not sure how to verify it.) |\n",
-    "| 5   | Pilot    | XOVC     | $T_r$     | Histogram: x = $T_r$ (s); y = Frequency | For every type of pilot (only one type on XOVC &lt;1; unspecified; unspecified>), multiple instances of the same pilot are sequentially submitted to XOVC. The histogram describes the dynamism of that pilot on XOVC as measured by the distribution of $T_r$. |\n",
+    "| 4   | Pilot    | XOVC     | $T_q$     | Histogram: x = $T_q$ (s); y = Frequency | For every experiment run, for every type of pilot (only one type on XOVC &lt;1; unspecified; unspecified>), multiple instances of the same pilot are sequentially submitted to XOVC. The histogram describes the dynamism of that pilot on XOVC as measured by the distribution of $T_q$. (We are not sure what we are measuring: the time the pilot has been waiting on the broker (the broker does late binding of jobs to hosts) or the time the pilot has been waiting on a host (the broker does early binding of jobs to hosts). I think the former but not sure how to verify it.) |\n",
+    "| 5   | Pilot    | XOVC     | $T_r$     | Histogram: x = $T_r$ (s); y = Frequency | For every experiment run, for every type of pilot (only one type on XOVC &lt;1; unspecified; unspecified>), multiple instances of the same pilot are sequentially submitted to XOVC. The histogram describes the dynamism of that pilot on XOVC as measured by the distribution of $T_r$. |\n",
     "| 6   | Workload | Host     | $TTC$     | Histogram: x = $TTC$ (s); y = Frequency | For every experiment run, multiple instances of the same run are sequentially executed on a host. The histogram describes the dynamism of that run's workload on that host as measured by the distribution of $TTC$. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed on the same host and the degree of concurrency (i.e., the number of pilots/cores) with which those tasks are executed on that host.) |\n",
     "| 7   | Workload | Host     | $TTQ$     | Histogram: x = $TTQ$ (s); y = Frequency | As 6 but for $TTQ$. |\n",
     "| 8   | Workload | Host     | $TTX$     | Histogram: x = $TTX$ (s); y = Frequency | As 6 but for $TTX$. |\n",
-    "| 9   | Pilot    | Host     | $T_r$     | Histogram: x = $T_r$ (s); y = Frequency | For every type of pilot (&lt;1; unspecified; host>), multiple instances of the same pilot become sequentially active on the same host. The histogram describes the dynamism of that pilot on that host as measured by the distribution of $T_r$. |\n",
-    "| 10  | Task     | Host     | $T_x$     | Histogram: x = $T_x$ (s); y = Frequency | For every type of task (only one in this paper), multiple instances of the same task are sequentially executed on the same host. The histogram describes the dynamism of the task on that host as measured by the distribution of $T_x$. |\n",
-    "| 11  | Workload | XOVC     | $C_w$     | Histogram: x = Number of concurrent active workloads; y = Frequency | For every experiment run, multiple instances of the same run are concurrently submitted to XOVC. The histogram describes the dynamism of that goup of runs' workload on XOVC as measured by the number of concurrent active (i.e., tasks of that workload are being executed) workloads ($C_w$) active at runtime |\n",
-    "| 12  | Workload | XOVC     | $C_p$     | Histogram: x = Number of concurrent active pilots; y = Frequency | For every experiment run, multiple instances of the same run are sequentially submitted to XOVC. The histogram describes the dynamism of that run's workload on XOVC as measured by the number of concurrent active (i.e., pilots are alive and ready to execute/executing tasks) pilots active at runtime ($C_p$) |\n",
-    "| 13  | Workload | XOVC     | $C_h$     | Histogram: x = Number of concurrent active hosts; y = Frequency | For every experiment run, multiple instances of the same run are sequentially submitted to XOVC. The histogram describes the dynamism of that run's workload on XOVC as measured by the number of concurrent active hosts (i.e., hosts where tasks are being executed) at runtime ($C_h$) |\n",
-    "| 14  | Workload | XOVC     | $C_t$     | Histogram: x = Number of concurrent active tasks; y = Frequency | For every experiment run, multiple instances of the same run are sequentially submitted to XOVC. The histogram describes describes the dynamism of that run's workload on XOVC as measured by the number of concurrent active (i.e., being executed) tasks at runtime ($C_t$)  |\n",
+    "| 9   | Pilot    | Host     | $T_r$     | Histogram: x = $T_r$ (s); y = Frequency | For every experiment run, for every type of pilot (&lt;1; unspecified; host>), multiple instances of the same pilot become sequentially active on the same host. The histogram describes the dynamism of that pilot on that host as measured by the distribution of $T_r$. |\n",
+    "| 10  | Task     | Host     | $T_x$     | Histogram: x = $T_x$ (s); y = Frequency | For every experiment run, for every type of task (only one in this paper), multiple instances of the same task are sequentially executed on the same host. The histogram describes the dynamism of the task on that host as measured by the distribution of $T_x$. |\n",
+    "| 11  | Workload | XOVC     | $C_w$     | Histogram: x = Number of concurrent active workloads; y = Frequency | For every experiment run, for every experiment run, multiple instances of the same run are concurrently submitted to XOVC. The histogram describes the dynamism of that goup of runs' workload on XOVC as measured by the number of concurrent active (i.e., tasks of that workload are being executed) workloads ($C_w$) active at runtime |\n",
+    "| 12  | Workload | XOVC     | $C_p$     | Histogram: x = Number of concurrent active pilots; y = Frequency | For every experiment run, for every experiment run, multiple instances of the same run are sequentially submitted to XOVC. The histogram describes the dynamism of that run's workload on XOVC as measured by the number of concurrent active (i.e., pilots are alive and ready to execute/executing tasks) pilots active at runtime ($C_p$) |\n",
+    "| 13  | Workload | XOVC     | $C_h$     | Histogram: x = Number of concurrent active hosts; y = Frequency | For every experiment run, for every experiment run, multiple instances of the same run are sequentially submitted to XOVC. The histogram describes the dynamism of that run's workload on XOVC as measured by the number of concurrent active hosts (i.e., hosts where tasks are being executed) at runtime ($C_h$) |\n",
+    "| 14  | Workload | XOVC     | $C_t$     | Histogram: x = Number of concurrent active tasks; y = Frequency | For every experiment run, for every experiment run, multiple instances of the same run are sequentially submitted to XOVC. The histogram describes describes the dynamism of that run's workload on XOVC as measured by the number of concurrent active (i.e., being executed) tasks at runtime ($C_t$)  |\n",
+    "\n",
     "\n",
     "Notes:\n",
-    "* We do not have $T_q$ at host level, only the aggregate of all the pilots' $T_q$ into $TTQ$.\n",
+    "* Do we have $T_q$ at host level?\n",
     "* Pilots are submitted to XOVC; run on a host.\n",
     "* Tasks are scheduled on a pilot; executed on a host.\n",
+    "\n",
     "\n",
     "# (Possible) Diagrams of the Measures of Heterogeneity\n",
     "\n",
@@ -332,22 +339,21 @@
     "- R = Resource\n",
     "- M = Measure\n",
     "\n",
-    "Measure for a given entity over all the resources\n",
+    "Heterogeneity of E on R as measured by M\n",
     "\n",
     "\n",
-    "| ID  | Entity   | Resource | Measure   | Description |\n",
-    "|-----|----------|----------|-----------|-------------|\n",
-    "| 1   | Workload | XOVC     | $TTC$     | Multiple instances of the same workload are concurrently submitted to XOVC. The median of their $TTC$ describes the heterogeneity of EVOC for the time to completion of that type of workload. (This is possible but I am not sure we have enough information for actually plotting it). |\n",
-    "| 2   | Workload | XOVC     | $TTQ$     | As 1 but for $TTQ$. (This is possible but I am not sure we have enough information for actually plotting it). |\n",
-    "| 3   | Workload | XOVC     | $TTX$     | As 1 but for $TTX$. (This is possible but I am not sure we have enough information for actually plotting it). |\n",
-    "| 4   | Pilot    | XOVC     | $T_q$     | Multiple instances of the same pilot are concurrently submitted to XOVC. The median of their $T_q$ describes the heterogeneity of EVOC for the queuing of that type of pilot. |\n",
-    "| 5   | Pilot    | XOVC     | $T_r$     | Multiple instances of the same pilot are concurrently submitted to XOVC. The median of their $T_q$ describes the heterogeneity of EVOC for running that type of pilot. |\n",
-    "| 6   | Workload | Host     | $TTC$     | Multiple instances of the same workload are concurrently executed on a host. The median of their $TTC$ describes the heterogeneity of that host for the time to completion of that type of workload. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
-    "| 7   | Workload | Host     | $TTQ$     | As 6 but for $TTQ$. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
-    "| 8   | Workload | Host     | $TTX$     | As 6 but for $TTX$. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed concurrently on the same host.) |\n",
-    "| 9   | Pilot    | Host     | $T_r$     | Multiple instances of the same pilot are concurrently executed on a host. The median of their $T_r$ describes the heterogeneity of that host for running that type of pilot. |\n",
-    "| 10  | Task     | Host     | $T_x$     | Multiple instances of the same task are concurrently executed on a host. The median of their $T_x$ describes the heterogeneity of that host for executing that type of task. |\n",
-    "\n",
+    "| ID  | Entity   | Resource | Measure   | Plot                                    | Description |\n",
+    "|:----|:---------|:---------|:----------|:----------------------------------------|:------------|\n",
+    "| 1   | Workload | XOVC     | $TTC$     | Histogram: x = $TTC$ (s); y = Frequency | For every experiment run, multiple instances of the same run are concurrently submitted to XOVC. The histogram describes the heterogeneity of that run's workload on XOVC as measured by the distribution of $TTC$. (This is possible but I am not sure we have enough data for actually plotting it). |\n",
+    "| 2   | Workload | XOVC     | $TTQ$     | Histogram: x = $TTQ$ (s); y = Frequency | As 1 but for $TTQ$. |\n",
+    "| 3   | Workload | XOVC     | $TTX$     | Histogram: x = $TTX$ (s); y = Frequency | As 1 but for $TTX$. |\n",
+    "| 4   | Pilot    | XOVC     | $T_q$     | Histogram: x = $T_q$ (s); y = Frequency | For every experiment run, for every type of pilot (only one type on XOVC &lt;1; unspecified; unspecified>), multiple instances of the same pilot are concurrently submitted to XOVC. The histogram describes the heterogeneity of that pilot on XOVC as measured by the distribution of $T_q$. (We are not sure what we are measuring: the time the pilot has been waiting on the broker (the broker does late binding of jobs to hosts) or the time the pilot has been waiting on a host (the broker does early binding of jobs to hosts). I think the former but not sure how to verify it.)\n",
+    "| 5   | Pilot    | XOVC     | $T_r$     | Histogram: x = $T_r$ (s); y = Frequency | For every experiment run, for every type of pilot (only one type on XOVC &lt;1; unspecified; unspecified>), multiple instances of the same pilot are concurrently submitted to XOVC. The histogram describes the heterogeneity of that pilot on XOVC as measured by the distribution of $T_r$. |\n",
+    "| 6   | Workload | Host     | $TTC$     | Histogram: x = $TTC$ (s); y = Frequency | For every experiment run, multiple instances of the same run are concurrently executed on a host. The histogram describes the heterogeneity of that run's workload on that host as measured by the distribution of $TTC$. (very difficult to have enough data for this plot because we do not control the number of tasks that are executed on the same host and the degree of concurrency (i.e., the number of pilots/cores) with which those tasks are executed on that host.) | \n",
+    "| 7   | Workload | Host     | $TTQ$     | Histogram: x = $TTQ$ (s); y = Frequency | As 6 but for $TTQ$. |\n",
+    "| 8   | Workload | Host     | $TTX$     | Histogram: x = $TTX$ (s); y = Frequency | As 6 but for $TTX$. |\n",
+    "| 9   | Pilot    | Host     | $T_r$     | Histogram: x = $T_r$ (s); y = Frequency | For every experiment run, for every type of pilot (&lt;1; unspecified; host>), multiple instances of the same pilot become concurrently active on the same host. The histogram describes the heterogeneity of that pilot on that host as measured by the distribution of $T_r$. | \n",
+    "| 10  | Task     | Host     | $T_x$     | Histogram: x = $T_x$ (s); y = Frequency | For every experiment run, for every type of task (only one type of task in this paper), multiple instances of the same task are concurrently executed on the same host. The histogram describes the heterogeneity of the task on that host as measured by the distribution of $T_x$. |\n",
     "\n",
     "# (Possible) Correlations\n",
     "\n",
