Ongoing get dynamism 3 and 4

--- a/OSG/analysis/osg_characterization_paper.ipynb
+++ b/OSG/analysis/osg_characterization_paper.ipynb
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -899,8 +899,37 @@
     "# - that each pilots has at least one unit executed\n",
     "# - that the units was successfully executed\n",
     "\n",
-    "# seq_pilots = \n"
+    "psample = posg.loc[(posg.P_LRMS_RUNNING > 1) & (posg.nunit > 1)]\n",
+    "\n",
+    "tr = []\n",
+    "tq = []\n",
+    "for sid in sosg.sid:\n",
+    "    p = psample[psample.sid == sid].pid.tolist()\n",
+    "    if p:\n",
+    "        tr.append(psample[(psample.sid == sid) & \n",
+    "                (psample.pid == p[0])].P_LRMS_RUNNING.tolist()[0])\n",
+    "        tq.append(psample[(psample.sid == sid) & \n",
+    "                (psample.pid == p[0])].P_LRMS_QUEUING.tolist()[0])\n",
+    "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
